<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/te"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="add"
    android:orientation="vertical"
    tools:context=".aboutUs">

    <TextView
        android:id="@+id/abtUs"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/top_intro_background"
        android:backgroundTint="#682E8B57"
        android:text="@string/abtUs"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/version"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/version"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/operatingSys"
        android:layout_width="366dp"
        android:layout_height="59dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/OperatingSys"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/headline"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bottombackground"
        android:backgroundTint="#954CAF50"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingLeft="20dp"
        android:paddingTop="80dp"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_back7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="BACK" />

</LinearLayout>